# sdkwork-shop

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apis/app-api/shop/: shop-app-api.openapi.json
apis/backend-api/shop/: shop-backend-api.openapi.json
apps/: README.md
apps/sdkwork-shop-common/: README.md
apps/sdkwork-shop-pc/: AGENTS.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-shop-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-shop-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-shop-pc/specs/: dependency.composition.json
apps/sdkwork-shop-pc/src/: main.tsx  styles.css
configs/: README.md  sdkwork-api-cloud-gateway.shop.development.toml  sdkwork-api-cloud-gateway.shop.production.toml
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  cloud.unified-process.development.env  cloud.unified-process.production.env  standalone.development.env  standalone.production.env  standalone.split-services.development.env  standalone.split-services.production.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/: README.md
crates/sdkwork-api-shop-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-shop-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-shop-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-shop-standalone-gateway/: Cargo.toml
crates/sdkwork-api-shop-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-shop-repository-sqlx/: Cargo.toml
crates/sdkwork-commerce-shop-repository-sqlx/src/: lib.rs  postgres_shop.rs  runtime_repository.rs  shop_service_area_key.rs  shop_subresource_upsert.rs  sqlite_shop.rs
crates/sdkwork-commerce-shop-service/: Cargo.toml  README.md
crates/sdkwork-commerce-shop-service/specs/: README.md  component.spec.json
crates/sdkwork-commerce-shop-service/src/: ports.rs  service.rs
crates/sdkwork-commerce-shop-service/src/commands/: mod.rs
crates/sdkwork-commerce-shop-service/src/ports/: mod.rs
crates/sdkwork-commerce-shop-service/src/queries/: mod.rs
crates/sdkwork-commerce-shop-service/src/runtime/: ports.rs
crates/sdkwork-commerce-shop-service/src/service/: mod.rs
crates/sdkwork-commerce-shop-service/src/validation/: mod.rs
crates/sdkwork-commerce-shop-service/tests/: shop_standard.rs
crates/sdkwork-router-shop-app-api/: Cargo.toml
crates/sdkwork-router-shop-app-api/src/: app_routes.rs  handlers.rs  http_route_manifest.rs  lib.rs  routes.rs  subject.rs  web_bootstrap.rs
crates/sdkwork-router-shop-backend-api/: Cargo.toml
crates/sdkwork-router-shop-backend-api/src/: backend_routes.rs  handlers.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-shop-app-api/: Cargo.toml
crates/sdkwork-routes-shop-app-api/specs/: component.spec.json
crates/sdkwork-routes-shop-app-api/src/: app_routes.rs  http_envelope.rs  http_route_manifest.rs  lib.rs  paths.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-shop-backend-api/: Cargo.toml
crates/sdkwork-routes-shop-backend-api/specs/: component.spec.json
crates/sdkwork-routes-shop-backend-api/src/: backend_routes.rs  http_envelope.rs  http_route_manifest.rs  lib.rs  routes.rs  subject.rs  web_bootstrap.rs
crates/sdkwork-shop-api-server/: Cargo.toml
crates/sdkwork-shop-api-server/src/: lib.rs  main.rs
crates/sdkwork-shop-database-host/: Cargo.toml
crates/sdkwork-shop-database-host/src/: lib.rs
crates/sdkwork-shop-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-shop-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-shop-repository-sqlx/: Cargo.toml
crates/sdkwork-shop-repository-sqlx/src/: lib.rs  postgres_shop.rs  runtime_repository.rs  shop_current_selection.rs  shop_subresource_upsert.rs  sqlite_shop.rs
crates/sdkwork-shop-service/: Cargo.toml  README.md
crates/sdkwork-shop-service-host/: Cargo.toml
crates/sdkwork-shop-service-host/src/: lib.rs
crates/sdkwork-shop-service/specs/: README.md  component.spec.json
crates/sdkwork-shop-service/src/: lib.rs
crates/sdkwork-shop-service/src/domain/: mod.rs
crates/sdkwork-shop-service/src/queries/: mod.rs
crates/sdkwork-shop-service/src/runtime/: domain.rs  mod.rs  service.rs
crates/sdkwork-shop-service/src/service/: mod.rs
crates/sdkwork-shop-service/src/validation/: mod.rs
crates/sdkwork-shop-service/tests/: shop_standard.rs
crates/sdkwork-shop-standalone-gateway/: Cargo.toml
crates/sdkwork-shop-standalone-gateway/src/: main.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql  001_shop_bootstrap.sql
deployments/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
etc/: sdkwork-api-cloud-gateway.shop.development.toml  sdkwork-api-cloud-gateway.shop.production.toml
examples/: README.md
jobs/: README.md
scripts/: README.md
sdks/: README.md
sdks/_route-manifests/app-api/: sdkwork-routes-shop-app-api.route-manifest.json  sdkwork-shop-standalone-gateway.route-manifest.json
sdks/sdkwork-shop-app-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-shop-backend-sdk/: sdk-manifest.json
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/: README.md
tests/contract/: database-framework.contract.test.mjs
tests/static/: shop-architecture.test.mjs
tools/: README.md  scaffold_shop_workspace.mjs  shop_openapi_authority.mjs  shop_openapi_export.mjs  shop_route_manifest_export.mjs  shop_sdk_generate.mjs
(+13 files in other folders)
