[workspace]
resolver = "2"
members = [
    "crates/sdkwork-shop-gateway-assembly",
  "crates/sdkwork-commerce-shop-service",
  "crates/sdkwork-commerce-shop-repository-sqlx",
  "crates/sdkwork-routes-shop-app-api",
  "crates/sdkwork-routes-shop-backend-api",
  "crates/sdkwork-shop-database-host",
  "crates/sdkwork-shop-service-host",
  "crates/sdkwork-shop-api-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork_commerce_contract_service = { path = "../sdkwork-account/crates/sdkwork-commerce-contract-service", package = "sdkwork-commerce-contract-service" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service", package = "sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-ops-http = { path = "../sdkwork-database/crates/sdkwork-database-ops-http" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork_commerce_shop_service = { path = "crates/sdkwork-commerce-shop-service", package = "sdkwork-commerce-shop-service" }
sdkwork_commerce_shop_repository_sqlx = { path = "crates/sdkwork-commerce-shop-repository-sqlx", package = "sdkwork-commerce-shop-repository-sqlx" }
sdkwork_routes_shop_app_api = { path = "crates/sdkwork-routes-shop-app-api", package = "sdkwork-routes-shop-app-api" }
sdkwork_routes_shop_backend_api = { path = "crates/sdkwork-routes-shop-backend-api", package = "sdkwork-routes-shop-backend-api" }
sdkwork_shop_database_host = { path = "crates/sdkwork-shop-database-host", package = "sdkwork-shop-database-host" }
sdkwork_shop_service_host = { path = "crates/sdkwork-shop-service-host", package = "sdkwork-shop-service-host" }
sdkwork_commerce_merchandise_service = { path = "../sdkwork-merchandise/crates/sdkwork-commerce-merchandise-service", package = "sdkwork-commerce-merchandise-service" }
sdkwork_commerce_merchandise_repository_sqlx = { path = "../sdkwork-merchandise/crates/sdkwork-commerce-merchandise-repository-sqlx", package = "sdkwork-commerce-merchandise-repository-sqlx" }
sdkwork_routes_merchandise_app_api = { path = "../sdkwork-merchandise/crates/sdkwork-routes-merchandise-app-api", package = "sdkwork-routes-merchandise-app-api" }
