[package]
name = "sdkwork-api-shop-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-shop application HTTP plane."

[lib]
name = "sdkwork_api_shop_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_shop_service_host.workspace = true
sdkwork_api_merchandise_assembly.workspace = true
sdkwork-routes-shop-app-api.workspace = true
sdkwork-routes-shop-backend-api.workspace = true
