[package]
name = "sdkwork-api-shop-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true


[[bin]]
name = "sdkwork-api-shop-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork-api-shop-assembly.workspace = true
axum = { workspace = true }
serde_json = { workspace = true }
sdkwork_shop_service_host.workspace = true
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

