[package]
name = "sdkwork-routes-shop-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sdkwork_commerce_contract_service.workspace = true
sdkwork_commerce_merchandise_repository_sqlx.workspace = true
sdkwork_commerce_merchandise_service.workspace = true
sdkwork_commerce_shop_repository_sqlx.workspace = true
sdkwork_commerce_shop_service.workspace = true
sdkwork_iam_context_service.workspace = true
sdkwork_routes_merchandise_app_api.workspace = true
sdkwork_shop_service_host.workspace = true
sdkwork_database_sqlx.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-iam-web-adapter.workspace = true
uuid = { workspace = true }
