[package]
name = "sdkwork-shop-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "shop-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
sdkwork_router_shop_app_api.workspace = true
sdkwork_router_shop_backend_api.workspace = true
sdkwork_shop_service_host.workspace = true
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
