[package]
name = "sdkwork-shop-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shop-server"
path = "src/main.rs"

[dependencies]
sdkwork_shop_gateway_assembly = { package = "sdkwork-shop-gateway-assembly", path = "../sdkwork-shop-gateway-assembly" }
axum = { workspace = true }
serde_json = { workspace = true }
sdkwork_shop_service_host.workspace = true
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

[[bin]]
name = "sdkwork-shop-standalone-gateway"
path = "src/main.rs"
