[package]
name = "sdkwork-shop-database-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dotenvy = { workspace = true }
sdkwork_database_config.workspace = true
sdkwork_database_lifecycle.workspace = true
sdkwork_database_spi.workspace = true
sdkwork_database_sqlx.workspace = true
