[package]
name = "sdkwork-shop-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-shop application HTTP plane."

[lib]
name = "sdkwork_shop_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_shop_service_host.workspace = true
sdkwork_routes_shop_app_api = { package = "sdkwork-routes-shop-app-api", path = "../sdkwork-routes-shop-app-api" }
sdkwork_routes_shop_backend_api = { package = "sdkwork-routes-shop-backend-api", path = "../sdkwork-routes-shop-backend-api" }
