[package]
name = "sdkwork-shop-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork_contract_service.workspace = true
sdkwork_shop_service.workspace = true
sdkwork_database_sqlx.workspace = true
sqlx = { workspace = true }
uuid = { workspace = true }
