[package]
name = "sdkwork-shop-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce shop domain rules for local/private Rust deployments."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sdkwork_contract_service.workspace = true

[dev-dependencies]
tokio = { workspace = true }
